[package]
name = "hg_server"
version = "0.1.0"
edition = "2025"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
spacetimedb = "1.1.2"
log = "0.4"
sha3 = "0.10"
serde = { version = "1.0.219", features = ["serde_derive"] }

[dependencies.uuid] 
version = "1.16.0"
default-features = false
features = [ "serde"] 